--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2>Sobre Mim</h2>
         <div class="sobre-mim-conteudo">
             <img src="minha-foto.jpg" alt="Minha Foto">
-            <p>Meu nome é [Seu Nome]. Lorem ipsum dolor sit amet. 
+            <p>Meu nome é Milena. Lorem ipsum dolor sit amet. 
                 Ut magni consequatur aut dolor voluptas eum voluptatem 
                 ratione est aliquid debitis et cumque tempora et possimus 
                 quia ab consequatur nisi. Non omnis ipsum sed consequatur 
@@ -23,17 +23,17 @@
     <section>
         <h2>Meus Hobbies</h2>
         <ul>
-            <li>Leitura</li>
-            <li>Esportes</li>
-            <li>Programação</li>
+            <li>jogar</li>
+            <li>assistir</li>
+            <li>viajar</li>
         </ul>
     </section>
     <section>
         <h2>Minhas Disciplinas Favoritas</h2>
         <ul>
-            <li>Matemática</li>
+            <li>geografia</li>
             <li>Física</li>
-            <li>História</li>
+            <li>teatro</li>
         </ul>
     </section>
     <section>
@@ -53,7 +53,7 @@
         </ul>
     </section>
     <footer>
-        <p>Entre em contato: <a href="mailto:meuemail@example.com">meuemail@example.com</a></p>
+        <p>Entre em contato: <a href="https://mail.google.com/mail/u/0/?ogbl#inbox?compose=new">milena.leopolo@escola.pr.gov.br</a></p>
     </footer>
 </body>
 </html>
